fix: scrollbar size css-var

--- a/src/style/variable.less
+++ b/src/style/variable.less
@@ -34,6 +34,7 @@
   --color-button_copy-bg-hover: fade(#f1f1f1, 80%);
   --color-button_copy-active: var(--color-button-active);
   --color-button_copy-bg-active: fade(#f1f1f1, 60%);
+  --size-scrollbar: 6.5px;
   --color-scrollbar-thumb: fade(#000, 25%);
   --color-scrollbar-thumb-hover: fade(#000, 35%);
   --opacity-img: 1;
